[package]
name = "mew-image-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
async-trait = "0.1.89"
aws-config = "1.8.11"
aws-sdk-s3 = "1.132.0"
axum = { version = "0.8.9", features = ["multipart"] }
base64.workspace = true
bytes = "1.10.1"
chrono.workspace = true
http = "1.3.1"
hyper = { version = "1.7.0", features = ["full"] }
mew-image-shared = { path = "../shared" }
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tower-sessions = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid.workspace = true
